--- a/WarbandCasualtyLog.csproj
+++ b/WarbandCasualtyLog.csproj
@@ -227,6 +227,7 @@
     <Compile Include="LogPatch.cs" />
     <Compile Include="SubModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WarbandConfig.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
